@@ -1,4 +1,4 @@
-/* $Id: tif_dirread.c,v 1.145 2008-12-30 00:39:22 bfriesen Exp $ */
+/* $Id: tif_dirread.c,v 1.146 2008-12-31 03:06:27 bfriesen Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -163,6 +163,34 @@ static int TIFFFetchNormalTag(TIFF*, TIFFDirEntry*, int recover);
 static int TIFFFetchStripThing(TIFF* tif, TIFFDirEntry* dir, uint32 nstrips, uint64** lpp);
 static int TIFFFetchSubjectDistance(TIFF*, TIFFDirEntry*);
 static void ChopUpSingleUncompressedStrip(TIFF*);
+static uint64 TIFFReadUInt64(const uint8 *value);
+
+typedef union _UInt64Aligned_t
+{
+	uint64 l;
+	uint32 i[2];
+	uint16 s[4];
+	uint8  c[8];
+} UInt64Aligned_t;
+
+/*
+  Unaligned safe copy of a uint64 value from an octet array.
+*/
+static uint64 TIFFReadUInt64(const uint8 *value)
+{
+	UInt64Aligned_t result;
+
+	result.c[0]=value[0];
+	result.c[1]=value[1];
+	result.c[2]=value[2];
+	result.c[3]=value[3];
+	result.c[4]=value[4];
+	result.c[5]=value[5];
+	result.c[6]=value[6];
+	result.c[7]=value[7];
+
+	return result.l;
+}
 
 static enum TIFFReadDirEntryErr TIFFReadDirEntryByte(TIFF* tif, TIFFDirEntry* direntry, uint8* value)
 {
@@ -2827,7 +2855,8 @@ static enum TIFFReadDirEntryErr TIFFReadDirEntryCheckedSlong8(TIFF* tif, TIFFDir
 
 static enum TIFFReadDirEntryErr TIFFReadDirEntryCheckedRational(TIFF* tif, TIFFDirEntry* direntry, double* value)
 {
-	uint32 m[2];
+	UInt64Aligned_t m;
+
 	assert(sizeof(double)==8);
 	assert(sizeof(uint64)==8);
 	assert(sizeof(uint32)==4);
@@ -2837,24 +2866,24 @@ static enum TIFFReadDirEntryErr TIFFReadDirEntryCheckedRational(TIFF* tif, TIFFD
 		uint32 offset = direntry->tdir_offset.toff_long;
 		if (tif->tif_flags&TIFF_SWAB)
 			TIFFSwabLong(&offset);
-		err=TIFFReadDirEntryData(tif,offset,8,m);
+		err=TIFFReadDirEntryData(tif,offset,8,m.i);
 		if (err!=TIFFReadDirEntryErrOk)
 			return(err);
 	}
 	else
-		*(uint64*)m = direntry->tdir_offset.toff_long8;
+		m.l = direntry->tdir_offset.toff_long8;
 	if (tif->tif_flags&TIFF_SWAB)
-		TIFFSwabArrayOfLong(m,2);
-	if (m[0]==0)
+		TIFFSwabArrayOfLong(m.i,2);
+	if (m.i[0]==0)
 		*value=0.0;
 	else
-		*value=(double)m[0]/(double)m[1];
+		*value=(double)m.i[0]/(double)m.i[1];
 	return(TIFFReadDirEntryErrOk);
 }
 
 static enum TIFFReadDirEntryErr TIFFReadDirEntryCheckedSrational(TIFF* tif, TIFFDirEntry* direntry, double* value)
 {
-	uint32 m[2];
+	UInt64Aligned_t m;
 	assert(sizeof(double)==8);
 	assert(sizeof(uint64)==8);
 	assert(sizeof(int32)==4);
@@ -2865,18 +2894,18 @@ static enum TIFFReadDirEntryErr TIFFReadDirEntryCheckedSrational(TIFF* tif, TIFF
 		uint32 offset = direntry->tdir_offset.toff_long;
 		if (tif->tif_flags&TIFF_SWAB)
 			TIFFSwabLong(&offset);
-		err=TIFFReadDirEntryData(tif,offset,8,m);
+		err=TIFFReadDirEntryData(tif,offset,8,m.i);
 		if (err!=TIFFReadDirEntryErrOk)
 			return(err);
 	}
 	else
-		*(uint64*)m=direntry->tdir_offset.toff_long8;
+		m.l=direntry->tdir_offset.toff_long8;
 	if (tif->tif_flags&TIFF_SWAB)
-		TIFFSwabArrayOfLong(m,2);
-	if ((int32)m[0]==0)
+		TIFFSwabArrayOfLong(m.i,2);
+	if ((int32)m.i[0]==0)
 		*value=0.0;
 	else
-		*value=(double)((int32)m[0])/(double)m[1];
+		*value=(double)((int32)m.i[0])/(double)m.i[1];
 	return(TIFFReadDirEntryErrOk);
 }
 
@@ -4528,9 +4557,9 @@ TIFFFetchDirectory(TIFF* tif, uint64 diroff, TIFFDirEntry** pdir,
 		{
 			if (tif->tif_flags&TIFF_SWAB)
 				TIFFSwabLong8((uint64*)ma);
-			mb->tdir_count=*(uint64*)ma;
+                        mb->tdir_count=TIFFReadUInt64(ma);
 			ma+=sizeof(uint64);
-			mb->tdir_offset.toff_long8=*(uint64*)ma;
+			mb->tdir_offset.toff_long8=TIFFReadUInt64(ma);
 			ma+=sizeof(uint64);
 		}
 		mb++;
@@ -5236,7 +5265,7 @@ TIFFFetchSubjectDistance(TIFF* tif, TIFFDirEntry* dir)
 {
 	static const char module[] = "TIFFFetchSubjectDistance";
 	enum TIFFReadDirEntryErr err;
-	uint32 m[2];
+	UInt64Aligned_t m;
 	assert(sizeof(double)==8);
 	assert(sizeof(uint64)==8);
 	assert(sizeof(uint32)==4);
@@ -5252,11 +5281,11 @@ TIFFFetchSubjectDistance(TIFF* tif, TIFFDirEntry* dir)
 			offset=*(uint32*)(&dir->tdir_offset);
 			if (tif->tif_flags&TIFF_SWAB)
 				TIFFSwabLong(&offset);
-			err=TIFFReadDirEntryData(tif,offset,8,m);
+			err=TIFFReadDirEntryData(tif,offset,8,m.i);
 		}
 		else
 		{
-			*(uint64*)m=dir->tdir_offset.toff_long8;
+			m.l=dir->tdir_offset.toff_long8;
 			err=TIFFReadDirEntryErrOk;
 		}
 	}
@@ -5264,10 +5293,10 @@ TIFFFetchSubjectDistance(TIFF* tif, TIFFDirEntry* dir)
 	{
 		double n;
 		if (tif->tif_flags&TIFF_SWAB)
-			TIFFSwabArrayOfLong(m,2);
-		if (m[0]==0)
+			TIFFSwabArrayOfLong(m.i,2);
+		if (m.i[0]==0)
 			n=0.0;
-		else if (m[0]==0xFFFFFFFF)
+		else if (m.i[0]==0xFFFFFFFF)
 			/*
 			 * XXX: Numerator 0xFFFFFFFF means that we have infinite
 			 * distance. Indicate that with a negative floating point
@@ -5275,7 +5304,7 @@ TIFFFetchSubjectDistance(TIFF* tif, TIFFDirEntry* dir)
 			 */
 			n=-1.0;
 		else
-			n=(double)m[0]/(double)m[1];
+			n=(double)m.i[0]/(double)m.i[1];
 		return(TIFFSetField(tif,dir->tdir_tag,n));
 	}
 	else
